--- a/style.css
+++ b/style.css
@@ -95,3 +95,9 @@ button:hover {
     display: inline-block;
     margin-top: 10px;
 }
+.kaart iframe {
+    width: 100%;
+    height: 200px;
+    border-radius: 12px 12px 0 0;
+    display: block;
+}
